--- a/SnakeGame/SnakeGame.Providers/SnakeGame.Providers.csproj
+++ b/SnakeGame/SnakeGame.Providers/SnakeGame.Providers.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleProvider.cs" />
     <Compile Include="MapProvider.cs" />
     <Compile Include="PlayerProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
